[gd_scene load_steps=2 format=3 uid="uid://c8y6vxe5xgj8w"]

[ext_resource type="Script" path="res://scenes/test/localization_test.gd" id="1_yjnvv"]

[node name="LocalizationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnvv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "本地化系统测试"
horizontal_alignment = 1

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LanguageContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/LanguageContainer"]
layout_mode = 2
text = "当前语言:"

[node name="LanguageOptionButton" type="OptionButton" parent="MainPanel/VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/KeyContainer"]
layout_mode = 2
text = "翻译键:"

[node name="KeyInput" type="LineEdit" parent="MainPanel/VBoxContainer/KeyContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入翻译键"

[node name="ParamsContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/ParamsContainer"]
layout_mode = 2
text = "参数:"

[node name="ParamsInput" type="LineEdit" parent="MainPanel/VBoxContainer/ParamsContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "参数 (用逗号分隔)"

[node name="TranslateButton" type="Button" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "翻译"

[node name="ResultContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultLabel" type="Label" parent="MainPanel/VBoxContainer/ResultContainer"]
layout_mode = 2
text = "翻译结果:"

[node name="ResultPanel" type="Panel" parent="MainPanel/VBoxContainer/ResultContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultText" type="Label" parent="MainPanel/VBoxContainer/ResultContainer/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CommonKeysContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/VBoxContainer/CommonKeysContainer"]
layout_mode = 2
text = "常用翻译键:"

[node name="CommonKeysGrid" type="GridContainer" parent="MainPanel/VBoxContainer/CommonKeysContainer"]
layout_mode = 2
columns = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "返回"
